--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
+
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+<meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval';">
+<meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo-R-purple" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rt3mis10 | Portfolio</title>
